# kublai-reader

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/background/: mod.rs  scheduler.rs  startup.rs
src-tauri/src/commands/: ai.rs  articles.rs  feeds.rs  folders.rs  mod.rs  parser.rs  settings.rs  sync.rs  tags.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/favicon/: fetcher.rs
src-tauri/src/feed/: fetcher.rs  mod.rs  opml.rs  parser.rs
src-tauri/src/reader/: extractor.rs  mod.rs
src-tauri/src/sync/: greader.rs  mod.rs
src/lib/components/articles/: ArticleList.svelte
src/lib/components/common/: ContextMenu.svelte  ThemeToggle.svelte
src/lib/components/dialogs/: AddFeedDialog.svelte  SettingsDialog.svelte
src/lib/components/layout/: AppShell.svelte  Sidebar.svelte  Titlebar.svelte  WindowControls.svelte
src/lib/components/reader/: ArticleReader.svelte
src/lib/components/sidebar/: FeedItem.svelte  FolderItem.svelte
src/lib/stores/: app.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: tauri.ts  theme.ts
