[package]
name = "kublai-reader"
version = "0.3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "json"] }
feed-rs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.37"
url = "2"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
